# a_cppbaslercapture

./: CMakeLists.txt  baslerCapture.sln  readme.MD
src/: baslerCapture.cpp  baslerCapture.h  imageRecvInterface.h  test_baslerCapture.cpp  test_captureClient.cpp  test_hardwareTrigger.cpp  test_stereocaptureServer.cpp  testclient_Stream.py
vs_baslerCapture/: ReadMe.txt  stdafx.cpp  vs_baslerCapture.cpp  vs_baslerCapture.vcxproj  vs_baslerCapture.vcxproj.filters
vs_baslerCapture/propsheets/: OpenCVPropertySheetDebug.props  basler.props
vs_baslerCaptureServer/: ReadMe.txt  stdafx.cpp  vs_baslerCaptureServer.vcxproj  vs_baslerCaptureServer.vcxproj.filters
vs_baslerCaptureServer/propsheet/: OpenCVPropertySheetRelease.props  basler.props
vs_baslerCaptureTestClient/: ReadMe.txt  stdafx.cpp  vs_baslerCaptureTestClient.cpp  vs_baslerCaptureTestClient.vcxproj  vs_baslerCaptureTestClient.vcxproj.filters
x64/Debug/: vs_baslerCapture.bat  vs_baslercaptureServer.bat
